--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "infyomlabs/laravel-ui-adminlte": "^3.2",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
-        "maatwebsite/excel": "^1.1",
+        "maatwebsite/excel": "^3.1",
+        "mckenziearts/laravel-notify": "^2.3",
         "spatie/laravel-permission": "^5.11"
     },
     "require-dev": {
