--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^2.0",
         "maatwebsite/excel": "^3.1",
         "mckenziearts/laravel-notify": "^2.3",
+        "realrashid/sweet-alert": "^7.1",
         "spatie/laravel-permission": "^5.11"
     },
     "require-dev": {
